edit README (en, zh-TW)

--- a/中文說明文件.md
+++ b/中文說明文件.md
@@ -38,13 +38,14 @@ git clone https://github.com/kent010341/mcserver-script.git
 取得對應版本的server.jar。目前支援版本1.13.2、1.14.4、1.15.2、1.16.5、1.17、1.17.1。  
 預設使用「latest」作為版本參數。(「latest」是手動更改的)  
 
-### sh/basic/
-* check-java.sh  
+* install-requirements.sh
 ```
-./check-java.sh
-```  
-這個腳本是用於確認是否有安裝Java。如果沒有會自動安裝OpenJDK 16。  
+./install-requirements.sh [--noscreen]
+```
+確認Java與screen是否安裝，若未安裝則自動進行安裝。在指令末端加上`--noscreen`來跳過確認screen的步驟。  
+此腳本預設安裝OpenJDK 16。
 
+### sh/basic/ 
 * start-server.sh
 ```
 ./start-server.sh [記憶體] [伺服器啟動檔檔案名稱]
